lab2/Compilers/Untitled Folder/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier error SEMI
    9       | Specifier ExtDecList error
   10       | error SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT error RC

   18 OptTag: ID
   19       | /* empty */

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | error RC

   32 StmtList: Stmt StmtList
   33         | /* empty */

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | Exp error

   42 DefList: Def DefList
   43        | /* empty */

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | error RP
   69    | Exp LB error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 10 17 23 26 31 40 41 45 68 69
INT (258) 22 66
FLOAT (259) 67
SEMI (260) 4 5 8 10 34 36 40 44
COMMA (261) 12 27 47 70
ID (262) 18 20 21 24 25 26 61 62 64 65
TYPE (263) 13
ASSIGNOP (264) 49 50
OR (265) 52
AND (266) 51
RELOP (267) 53
MINUS (268) 55 59
PLUS (269) 54
DIV (270) 57
STAR (271) 56
NOT (272) 60
RC (273) 15 17 30 31
LC (274) 15 30
RP (275) 24 25 26 37 38 39 58 61 62 68
LP (276) 24 25 26 37 38 39 58 61 62
RB (277) 22 23 63 69
LB (278) 22 63 69
DOT (279) 64
LOWER_THAN_ELSE (280)
RETURN (281) 36
STRUCT (282) 15 16 17
WHILE (283) 39
ELSE (284) 38
IF (285) 37 38
UMINUS (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (36)
    on left: 11 12, on right: 4 9 12
Specifier (37)
    on left: 13 14, on right: 4 5 6 7 8 9 29 44 45
StructSpecifier (38)
    on left: 15 16 17, on right: 14
OptTag (39)
    on left: 18 19, on right: 15
Tag (40)
    on left: 20, on right: 16
VarDec (41)
    on left: 21 22 23, on right: 11 12 22 29 48 49
FunDec (42)
    on left: 24 25 26, on right: 6
VarList (43)
    on left: 27 28, on right: 24 27
ParamDec (44)
    on left: 29, on right: 27 28
CompSt (45)
    on left: 30 31, on right: 6 35
StmtList (46)
    on left: 32 33, on right: 30 32
Stmt (47)
    on left: 34 35 36 37 38 39 40 41, on right: 32 37 38 39
DefList (48)
    on left: 42 43, on right: 15 30 42
Def (49)
    on left: 44 45, on right: 42
DecList (50)
    on left: 46 47, on right: 44 45 47
Dec (51)
    on left: 48 49, on right: 46 47
Exp (52)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69, on right: 34 36 37 38 39 41 49 50 51 52 53 54 55 56 57 58
    59 60 63 64 69 70 71
Args (53)
    on left: 70 71, on right: 61 70


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

   10 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


state 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error
    8       | Specifier . error SEMI
    9       | Specifier . ExtDecList error

    error  shift, and go to state 16
    SEMI   shift, and go to state 17
    ID     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


state 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


state 9

   10 ExtDef: error SEMI .

    $default  reduce using rule 10 (ExtDef)


state 10

   17 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 22


state 11

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


state 12

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


state 13

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


state 14

    0 $accept: Program $end .

    $default  accept


state 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 16

    7 ExtDef: Specifier error .
    8       | Specifier error . SEMI
   23 VarDec: error . RB

    SEMI  shift, and go to state 24
    RB    shift, and go to state 25

    $default  reduce using rule 7 (ExtDef)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

   21 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . LP error RP

    LP  shift, and go to state 26

    $default  reduce using rule 21 (VarDec)


state 19

    4 ExtDef: Specifier ExtDecList . SEMI
    9       | Specifier ExtDecList . error

    error  shift, and go to state 27
    SEMI   shift, and go to state 28


state 20

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 11 (ExtDecList)


state 21

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


state 22

   17 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 17 (StructSpecifier)


state 23

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


state 24

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 25

   23 VarDec: error RB .

    $default  reduce using rule 23 (VarDec)


state 26

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   26       | ID LP . error RP

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


state 27

    9 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 9 (ExtDef)


state 28

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 29

   12 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


state 30

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


state 31

   31 CompSt: error . RC

    RC  shift, and go to state 46


state 32

   30 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 36


state 33

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 34

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


state 35

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


state 36

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 36


state 37

   26 FunDec: ID LP error . RP

    RP  shift, and go to state 53


state 38

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


state 39

   29 ParamDec: Specifier . VarDec

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec  go to state 54


state 40

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


state 41

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 56

    $default  reduce using rule 28 (VarList)


state 42

   23 VarDec: error . RB

    RB  shift, and go to state 25


state 43

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


state 44

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


state 45

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 57


state 46

   31 CompSt: error RC .

    $default  reduce using rule 31 (CompSt)


state 47

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LC      shift, and go to state 32
    LP      shift, and go to state 64
    RETURN  shift, and go to state 65
    WHILE   shift, and go to state 66
    IF      shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


state 48

   22 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 30

    $default  reduce using rule 48 (Dec)


state 49

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 73
    SEMI   shift, and go to state 74


state 50

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 46 (DecList)


state 51

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


state 52

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


state 53

   26 FunDec: ID LP error RP .

    $default  reduce using rule 26 (FunDec)


state 54

   22 VarDec: VarDec . LB INT RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 29 (ParamDec)


state 55

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


state 56

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 41


state 57

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


state 58

   31 CompSt: error . RC
   40 Stmt: error . SEMI
   68 Exp: error . RP

    SEMI  shift, and go to state 77
    RC    shift, and go to state 46
    RP    shift, and go to state 78


state 59

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 60

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 61

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 65 (Exp)


state 62

   59 Exp: MINUS . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


state 63

   60 Exp: NOT . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 82


state 64

   58 Exp: LP . Exp RP

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


state 65

   36 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 84


state 66

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 85


state 67

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 86


state 68

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


state 69

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


state 70

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LC      shift, and go to state 32
    LP      shift, and go to state 64
    RETURN  shift, and go to state 65
    WHILE   shift, and go to state 66
    IF      shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 88
    Stmt      go to state 70
    Exp       go to state 71


state 71

   34 Stmt: Exp . SEMI
   41     | Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    error     shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    OR        shift, and go to state 92
    AND       shift, and go to state 93
    RELOP     shift, and go to state 94
    MINUS     shift, and go to state 95
    PLUS      shift, and go to state 96
    DIV       shift, and go to state 97
    STAR      shift, and go to state 98
    LB        shift, and go to state 99
    DOT       shift, and go to state 100


state 72

   49 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 101


state 73

   45 Def: Specifier DecList error .

    $default  reduce using rule 45 (Def)


state 74

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


state 75

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 42
    ID     shift, and go to state 43

    VarDec   go to state 48
    DecList  go to state 102
    Dec      go to state 50


state 76

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


state 77

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


state 78

   68 Exp: error RP .

    $default  reduce using rule 68 (Exp)


state 79

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    RP     shift, and go to state 103
    LP     shift, and go to state 64

    Exp   go to state 104
    Args  go to state 105


state 80

   68 Exp: error . RP

    RP  shift, and go to state 78


state 81

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    $default  reduce using rule 59 (Exp)


state 82

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    LB   shift, and go to state 99
    DOT  shift, and go to state 100

    $default  reduce using rule 60 (Exp)


state 83

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 91
    OR        shift, and go to state 92
    AND       shift, and go to state 93
    RELOP     shift, and go to state 94
    MINUS     shift, and go to state 95
    PLUS      shift, and go to state 96
    DIV       shift, and go to state 97
    STAR      shift, and go to state 98
    RP        shift, and go to state 106
    LB        shift, and go to state 99
    DOT       shift, and go to state 100


state 84

   36 Stmt: RETURN Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   69    | Exp . LB error RB

    SEMI      shift, and go to state 107
    ASSIGNOP  shift, and go to state 91
    OR        shift, and go to state 92
    AND       shift, and go to state 93
    RELOP     shift, and go to state 94
    MINUS     shift, and go to state 95
    PLUS      shift, and go to state 96
    DIV       shift, and go to state 97
    STAR      shift, and go to state 98
    LB        shift, and go to state 99
    DOT       shift, and go to state 100


state 85

   39 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 108


state 86

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 109


state 87

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


state 88

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


state 89

   41 Stmt: Exp error .

    $default  reduce using rule 41 (Stmt)


state 90

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


state 91

   50 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 110


state 92

   52 Exp: Exp OR . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 111


state 93

   51 Exp: Exp AND . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 112


state 94

   53 Exp: Exp RELOP . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 113


state 95

   55 Exp: Exp MINUS . Exp

    error  shift, and go to state 80
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 114


state 96

   54 Exp: Exp PLUS . Exp
